--- a/assets/main.css
+++ b/assets/main.css
@@ -1015,18 +1015,29 @@ p {
 ----------------------------------------------------------------------------- */
 
 .progress {
+  background: url(stripes-dark-blue.png) repeat left center #00a5ed;
+  background-size: auto 40px;
+  animation: 1000ms linear 0ms infinite progress-crawl;
   height: 12px;
-  background: blue;
   position: absolute;
   width: 100%;
   z-index: 10;
   opacity: 0;
-  transition: opacity 200ms linear;
+  transition: opacity 160ms linear;
   pointer-events: none;
 }
 
 .progress-is-loading {
   opacity: 1;
+}
+
+@keyframes progress-crawl {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 86px 0;
+  }
 }
 
 /* FTU - First Time Use
